--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Εξωτερικά</h2>
+							<h2>Εξωτερικα</h2>
 							<p><a href="https://eu.jotform.com/211693791550056">Πατήστε εδώ</a></p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Παιδιατρικά</h2>
-							<p>...</p>
+							<h2>Παιδιατρικα</h2>
+							<p><a href="https://eu.jotform.com/211693791550056">Πατήστε εδώ</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p><a href="https://eu.jotform.com/211693791550056">Πατήστε εδώ</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
 							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p><a href="https://eu.jotform.com/211693791550056">Πατήστε εδώ</p>
 						</article>
-						<article class="thumb">
+						<!--<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
 							<h2>Cursis aliquam nisl</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
@@ -88,7 +88,7 @@
 							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
 							<h2>Vehicula id nulla dignissim</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
+						</article>-->
 					</div>
 
 				<!-- Footer -->
